--- a/css/reset.css
+++ b/css/reset.css
@@ -1,13 +1,5 @@
 /* Eric Meyers Reset CSS rules */
-html, body, div, span,
-applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-dd, dl, dt, li, ol, ul,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
+html, body, div, span, iframe, h1, h2, h3, h5, p, a, em, img, strong, li, ol, ul, form, label {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -22,31 +14,14 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 a img, :link img, :visited img {
 	border: 0;
 }
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
 ol, ul {
 	list-style: none;
-}
-q:before, q:after,
-blockquote:before, blockquote:after {
-	content: "";
 }
 
 
 input { vertical-align:middle; }
 
-.clear:after {
-    content: "."; 
-    display: block; 
-    height: 0; 
-    clear: both; 
-    visibility: hidden;
-}
-
 /* no need to hide from IE5 Mac as its filtered out anyway */
-.clear {display:inline-block;}
 
 
 
